fix: made toggle theme button smaller for improve mobile version

--- a/src/components/common/ThemeToggleButton/_ThemeToggleButton.scss
+++ b/src/components/common/ThemeToggleButton/_ThemeToggleButton.scss
@@ -20,15 +20,15 @@
         width: v.$icon-width;
         position: absolute;
         z-index: 2;
-        top: 0.25em;
-        right: 0.25em;
+        top: 0.2em;
+        right: 0.2em;
       }
       .button__sun {
         width: v.$icon-width;
         position: absolute;
         z-index: 2;
-        top: 0.25em;
-        left: 0.25em;
+        top: 0.2em;
+        left: 0.15em;
       }
     }
 
