--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -5,11 +5,11 @@ $box-shodow-1: 0 10px 15px -3px rgb(0, 0, 0, 0.1), 0 3px 9px -2px #9ca3af;
 $box-shodow-2: 0 8px 16px 0 rgba(0, 0, 0, 0.12);
 
 /* toggle button theme */
-$button-width: 3em;
-$button-height: 1.5em;
-$toggle-diameter: 1.3em;
+$button-width: 2.6em;
+$button-height: 1.3em;
+$toggle-diameter: 1.2em;
 $button-toggle-offset: calc(($button-height - $toggle-diameter) / 2);
-$icon-width: 1em;
+$icon-width: 0.95em;
 $toggle-shadow-offset: 10px;
 $toggle-wider: 2em;
 $shadow-theme-button: inset 0px -5px 15px 1px rgba(0, 0, 0, 0.4),
